--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <div id="main" class="container"></div>
-<script src="js/main.js"></script>
+<script src="js/bundle.js"></script>
 </body>
 </html>
